--- a/public/html/Communities – Medellin Community.html
+++ b/public/html/Communities – Medellin Community.html
@@ -1487,7 +1487,7 @@
                   <p>
                     <span style="font-weight: 600" data-token-index="0"
                       >🏆 Welcome to the Holy Grail of WhatsApp Community Groups
-                      in Medellín 🌇 > <br /></span
+                      in Medellín 🌇<br /></span
                     >Connect, create and get inspired with like-minded people,
                     both locals and foreigners.&nbsp;Support the movement by
                     donating below. Let’s grow the community together!
